<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/weeklyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:text="@string/w_chentlich"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

            <Button
                android:id="@+id/newEventButtonMonthly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/neues_ereignis"
                android:textColor="@color/white"
                android:background="@null"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/previousMonthButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/white"
                android:background="@null"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/feb_2021"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary" />

            <Button
                android:id="@+id/nextMonthButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forward"
                android:textColor="@color/white"
                android:background="@null"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:background="@drawable/textview_with_borderbottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:background="@drawable/textview_with_borderbottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:background="@drawable/textview_with_borderbottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:background="@drawable/textview_with_borderbottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thur"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:background="@drawable/textview_with_borderbottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:background="@drawable/textview_with_borderbottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:background="@drawable/textview_with_borderbottom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="500dp" />
    </LinearLayout>
</ScrollView>
